objects/Portal_Menu__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mega_Menu_Category__c</fullName>
        <label>Mega Menu Category</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Menu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Menu</label>
        <referenceTo>Portal_Menu__c</referenceTo>
        <relationshipLabel>Portal Menus</relationshipLabel>
        <relationshipName>Portal_Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Page</label>
        <referenceTo>Portal_Page__c</referenceTo>
        <relationshipLabel>Portal Menus</relationshipLabel>
        <relationshipName>Portal_Menus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Style_Class__c</fullName>
        <label>Style Class</label>
        <picklist>
            <picklistValues>
                <fullName>col-xs-2 col-md-2 col-lg-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-4 col-md-4 col-lg-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-6 col-md-6 col-lg-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-8 col-md-8 col-lg-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-4 col-lg-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-8 col-lg-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>col-xs-12 col-md-12 col-lg-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yamm-fw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Portal Menu</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Portal_Page__c</columns>
        <columns>NAME</columns>
        <columns>Portal_Menu__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Label__c</columns>
        <columns>Order__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Portal Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Menus</pluralLabel>
    <recordTypes>
        <fullName>Main_Menu</fullName>
        <active>true</active>
        <label>Main Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mega_Menu</fullName>
        <active>true</active>
        <label>Mega Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu_Item</fullName>
        <active>true</active>
        <label>Menu Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu_Label</fullName>
        <active>true</active>
        <label>Menu Label</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portal_Home</fullName>
        <active>true</active>
        <label>Portal Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stand_Alone</fullName>
        <active>true</active>
        <label>Stand Alone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Menu</fullName>
        <active>true</active>
        <label>Sub Menu</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>